# ProteinCentral

./: .gitignore  CMakeLists.txt  README.md  create_residue_links_files.bash  create_residue_links_files.sh  main.cpp  my_graph_creation.cpp  run_project.bash
centrality_calculation/: CMakeLists.txt  centrality_calculation.cpp  multiple_centrality_calculation.bash
graph_creation/: create_residue_links_files.bash
graph_generation_result/: 1A23_residue_links.txt
graph_generation_results/: 1A22_residue_links.tsv  1A4Y_residue_links.tsv  1ACB_residue_links.tsv  1AHW_residue_links.tsv  1AK4_residue_links.tsv  1AO7_residue_links.tsv  1B2S_residue_links.tsv  1B2U_residue_links.tsv  1B3S_residue_links.tsv  1B41_residue_links.tsv  1BD2_residue_links.tsv  1BJ1_residue_links.tsv  1BP3_residue_links.tsv  1BRS_residue_links.tsv  1C1Y_residue_links.tsv  1C4Z_residue_links.tsv  1CBW_residue_links.tsv  1CHO_residue_links.tsv  1CSE_residue_links.tsv  1CSO_residue_links.tsv  1CT0_residue_links.tsv  1CT2_residue_links.tsv  1CT4_residue_links.tsv  1CZ8_residue_links.tsv  1DAN_residue_links.tsv  1DQJ_residue_links.tsv  1DVF_residue_links.tsv  1E50_residue_links.tsv  (+316 more)
tools/calculate_centrality/: CMakeLists.txt  calculate_centrality.cpp
tools/calculate_centrality/igraph-0.10.13/doc/html/: igraph-Attributes.html  igraph-Basic.html  igraph-Cliques.html  igraph-Data-structures.html  igraph-Generators.html  igraph-Operators.html  igraph-Tutorial.html
tools/generate_list_graph/: CMakeLists.txt  generate_list_graph.cpp
tools/generate_list_graph/voronota_1.29.4198/: install_manifest.txt
(+505 files in other folders)
